sumo/tests/traci/VariableRetrieval/POI/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 167: Unsupported variable specified
